--- a/astrogrid/datacenter/project.properties
+++ b/astrogrid/datacenter/project.properties
@@ -1,4 +1,12 @@
-maven.repo.remote = http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
+# Remote repository location.
+maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
 
-# enable maven jar overriding.
-maven.jar.override = on
+# ChangeLog
+maven.changelog.range=31
+
+# Development process URL
+maven.xdoc.developmentProcessUrl=http://wiki.astrogrid.org/bin/view/Astrogrid/DevelopmentDocs
+
+# UI
+maven.ui.section.background=#00f
+maven.ui.banner.background=#00f
