Repair after discovering a lot of refactoring changes had not been picked up.

--- a/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
@@ -50,6 +50,21 @@ AGDTCZ00002=AGDTCZ00002:DatasetAgent: Not initialized. Perhaps my configuration 
 AGDTCZ00003=AGDTCZ00003:Message: Message key is null.
 AGDTCZ00004=AGDTCZ00004:Message: Message pattern or inserts are invalid
 AGDTCZ00005=AGDTCZ00005:Message: Message not found in ResourceBundle
+#AGDTCZ00006=AGDTCZ00006:Message: Reserved
+#AGDTCZ00007=AGDTCZ00007:Message: Reserved
+#AGDTCZ00008=AGDTCZ00008:Message: Reserved
+#AGDTCZ00009=AGDTCZ00009:Message: Reserved
+#AGDTCZ00010=AGDTCZ00010:Message: Reserved
+#AGDTCZ00011=AGDTCZ00011:Message: Reserved
+#AGDTCZ00012=AGDTCZ00012:Message: Reserved
+#AGDTCZ00013=AGDTCZ00013:Message: Reserved
+#AGDTCZ00014=AGDTCZ00014:Message: Reserved
+#AGDTCZ00015=AGDTCZ00015:Message: Reserved
+#AGDTCZ00016=AGDTCZ00016:Message: Reserved
+#AGDTCZ00017=AGDTCZ00017:Message: Reserved
+#AGDTCZ00018=AGDTCZ00018:Message: Reserved
+#AGDTCZ00019=AGDTCZ00019:Message: Reserved
+#AGDTCZ00020=AGDTCZ00020:Message: Reserved
 
 AGDTCE00030=:{0}: Failed to parse Job Request.
 AGDTCE00040=:{0}: Query ultimately failed. See previous messages.
