- added support for SNAPSHOT deployment

--- a/astrogrid/common/project.properties
+++ b/astrogrid/common/project.properties
@@ -10,3 +10,11 @@ maven.xdoc.developmentProcessUrl=http://wiki.astrogrid.org/bin/view/Astrogrid/De
 # UI
 maven.ui.section.background=#00f
 maven.ui.banner.background=#00f
+
+# Deployment
+maven.repo.central=www.astrogrid.org
+maven.repo.central.directory=/var/www/www/maven
+maven.remote.group=cvs
+
+# Test - allow deployment of snapshot even when tests fail
+maven.test.failure.ignore=true
