*** empty log message ***

--- a/astrogrid/portalB/src/java/org/astrogrid/portal/cocoon/query/QueryAction.properties
+++ b/astrogrid/portalB/src/java/org/astrogrid/portal/cocoon/query/QueryAction.properties
@@ -16,4 +16,4 @@ ASTROGRID.DS.NAME1=hydratest
 ASTROGRID.DS.URL2=http://hydra.star.le.ac.uk:8080/axis/services/DatasetAgentTest2
 ASTROGRID.DS.NAME2=hydratest2
 
-DEBUG.FLAG=false
+DEBUG.FLAG=true
