Added 27/08/03 by Elizabeth Auden
1. Changed QueryAction.properties to call Axis deployed Registry_Interface3_0
2. Rebuilt cocoon.war

--- a/astrogrid/portalB/src/java/org/astrogrid/portal/cocoon/query/QueryAction.properties
+++ b/astrogrid/portalB/src/java/org/astrogrid/portal/cocoon/query/QueryAction.properties
@@ -1,6 +1,6 @@
 
-ASTROGRID.REGISTRY.URL=http://msslxy.mssl.ucl.ac.uk:8080/soap/servlet/rpcrouter
-ASTROGRID.REGISTRY.NS=urn:org.astrogrid.registry.RegistryInterface3_0
+ASTROGRID.REGISTRY.URL=http://msslxy.mssl.ucl.ac.uk:8080/axis/services/RegistryInterface3_0
+ASTROGRID.REGISTRY.NS=org.astrogrid.registry.RegistryInterface3_0
 ASTROGRID.REGISTRY.METHODCALL=submitQuery
 
 ASTROGRID.JES.URL=http://hydra.star.le.ac.uk:8080/axis/services/JobControllerService
