- added custom checkstyle checks

--- a/astrogrid/datacenter/project.properties
+++ b/astrogrid/datacenter/project.properties
@@ -19,3 +19,5 @@ maven.remote.group=cvs
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
 
+# Checkstyle file
+maven.checkstyle.properties=${basedir}/checkstyle.xml
