--- a/astrogrid/community/build.xml
+++ b/astrogrid/community/build.xml
@@ -2,10 +2,13 @@
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/community/Attic/build.xml,v $</cvs:source>
     | <cvs:author>$Author: dave $</cvs:author>
-    | <cvs:date>$Date: 2003/09/03 06:39:13 $</cvs:date>
-    | <cvs:version>$Revision: 1.2 $</cvs:version>
+    | <cvs:date>$Date: 2003/09/03 10:42:19 $</cvs:date>
+    | <cvs:version>$Revision: 1.3 $</cvs:version>
     | <cvs:log>
     |   $Log: build.xml,v $
+    |   Revision 1.3  2003/09/03 10:42:19  dave
+    |   Fixed missing task in build.xml
+    |
     |   Revision 1.2  2003/09/03 06:39:13  dave
     |   Rationalised things into one set of SOAP stubs and one set of data objects for both client and server.
     |
@@ -370,6 +373,13 @@
 				<include name="**.jar"/>
 			</fileset>
 		</delete>
+	</target>
+
+	<!--+
+		| Install Tomcat.
+		+-->
+	<target name="tomcat.INSTALL" depends="">
+		<!-- Project assumes Tomcat is installed -->
 	</target>
 
 	<!--+
@@ -1736,6 +1746,7 @@
 			<sequential>
 				<antcall target="project.BUILD"/>
 				<antcall target="project.DEPLOY"/>
+				<antcall target="project.TEST"/>
 			</sequential>
 		</parallel>
 	</target>
