--- a/astrogrid/datacenter/project.properties
+++ b/astrogrid/datacenter/project.properties
@@ -1,5 +1,5 @@
 # Remote repository location.
-maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
+maven.repo.remote=http://www.ibiblio.org/maven, http://www.astrogrid.org/maven
 
 # ChangeLog
 maven.changelog.range=31
@@ -21,3 +21,7 @@ maven.test.failure.ignore=true
 
 # Checkstyle file
 maven.checkstyle.properties=${basedir}/checkstyle.xml
+
+#javadoc. -- fill this in.
+maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
+
